# polygons

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  groups.dox  module.md
src/: CMakeLists.txt  Point.cpp  Point.hpp  Polygon.cpp  Polygon.hpp  Segment.cpp  Segment.hpp  main.cpp
tst/: CMakeLists.txt  point_test.cpp  segment_test.cpp
